refactored yo fix huge performance issues on insertion of log entries